# apollo_supplement

./: .gitignore  README.md  操作笔记
MarkDown文档/: Apollo横向控制模块梳理.md  Apollo纵向控制模块梳理.md  Apollo补充文字说明.md  apollo各模块启动指导文档.md  使用ROS-UsbCam节点驱动相机并进行标定.md  时钟同步线制作.md  笔记
MarkDown文档/1.实车操作/: 0.附录.md  1.基础知识介绍和驱动配置.md  1.基础知识和驱动配置.md  2.实车标定实践.md  3.定位模块实践.md  3.定位模块操作实践.md  3.建图定位实践.md  4.感知模块实践.md  4.感知预测实践.md  5.规划控制实践.md  5.规划控制模块实践.md
MarkDown文档/1.实车操作(北京)/: 实车标定实践.md  规划模块操作实践.md
MarkDown文档/1.实车操作/OLD/: 控制模块控制器标定实践.md
MarkDown文档/1.实车操作/OLD.md/: 基础知识介绍和驱动配置.md  定位模块操作实践.md  实车标定实践.md
MarkDown文档/2.联合仿真/: 1.Apollo&SVL联合仿真:基础.md  2.Apollo&SVL联合仿真:标定.md  3.Apollo&SVL联合仿真:建图定位.md  4.Apollo&SVL联合仿真:感知.md  Apollo&SVL联合仿真(1).md  Apollo&SVL联合仿真(2)标定.md  Apollo&SVL联合仿真(3)建图与定位.md  Apollo&SVL联合仿真(4)感知融合.md
MarkDown文档/3.线下课/: 深蓝湖州线下课_L1.md  深蓝湖州线下课_L2.md  深蓝湖州线下课_L3.md  深蓝湖州线下课_L4.md  深蓝湖州线下课_L5.md  深蓝湖州线下课_附录.md
MarkDown文档/SVL仿真文档/: 4 油门标定.md  Apollo&SVL联合仿真(1).md  Apollo&SVL联合仿真(2)标定.md  Apollo&SVL联合仿真(3)建图与定位.md  Apollo&SVL联合仿真(4)感知融合.md  Apollo&SVL联合仿真(一).md  Apollo&SVL联合仿真(三) 建图与定位.md  Apollo&SVL联合仿真（二）标定.md  Apollo&SVL联合仿真（四）感知融合.md
MarkDown文档/代码梳理文档/: Apollo横向控制模块梳理.md  Apollo纵向控制模块梳理.md  Planning流程梳理.md
MarkDown文档/实车操作.md/: 6.控制模块控制器标定实践.md
MarkDown文档/实车操作.md/OLD.md/: 感知模块操作实践.md
MarkDown文档/实车操作文档/: 1.基础知识介绍和驱动配置.md  2.实车标定实践.md  3.定位模块操作实践.md  4.感知模块操作实践.md  5.规划模块操作实践.md  6.控制模块控制器标定实践.md  使用ROS-UsbCam节点驱动相机并进行标定.md  基础知识介绍和驱动配置(一).md  基础知识介绍和驱动配置.md  定位模块操作实践.md  实车标定实践(二).md  实车标定实践.md  实车标定实践_new.md  感知模块操作实践.md  控制模块控制器标定实践(五).md  控制模块控制器标定实践.md  深蓝湖州线下课_L1.md  深蓝湖州线下课_L2.md  深蓝湖州线下课_L3.md  深蓝湖州线下课_L4.md  深蓝湖州线下课_L5.md  规划模块操作实践.md  附录.md
MarkDown文档/废弃文档/: apollo各模块启动指导文档.md
MarkDown文档/湖州文档-上课用/: 深蓝湖州线下课_L2.md  深蓝湖州线下课_L4.md
MarkDown文档/湖州文档-上课用/废弃文档/: Apollo补充文字说明.md
MarkDown文档/系统安装/: apollo系统安装文档.md
MarkDown文档/线下课.md/: 深蓝湖州线下课_L1.md  深蓝湖州线下课_L2.md  深蓝湖州线下课_L4.md
PDF导出版本/Apollo&SVL联合仿真（二）标定/: Apollo&SVL联合仿真（二）标定.md
markdown文档/实车操作.md/: 1.基础知识介绍和驱动配置.md  3.定位模块操作实践.md  4.感知模块操作实践.md
markdown文档/线下课.md/: 深蓝湖州线下课_L3.md
markdown文档/联合仿真.md/: Apollo&SVL联合仿真(2)标定.md
补充代码/: RawRader2CSV.py
补充代码/calib/floam_pcd/: CMakeLists.txt
补充代码/calib/image_collect/src/cam_collect/: CMakeLists.txt  package.xml
补充代码/calib/image_collect/src/cam_collect/launch/: cam_collect.launch
补充代码/calib/image_collect/src/cam_collect/src/: cam_mona.cpp  cam_test.cpp  get_char_input.cpp
补充代码/calib/lidar2camera/: CMakeLists.txt
补充代码/calib/lidar2camera/data/: center_camera-intrinsic.json  front_6mm_extrinsics.yaml  front_6mm_intrinsics.yaml  top_center_lidar-to-center_camera-extrinsic.json
补充代码/calib/lidar2camera/demo/: front_6mm_extrinsics.yaml
补充代码/calib/lidar2camera/include/: extrinsic_param.hpp  intrinsic_param.hpp
补充代码/calib/lidar2camera/src/: run_lidar2camera.cpp
补充代码/calib/lidar2camera/test/: front_6mm_extrinsics.yaml  front_6mm_intrinsics.yaml
补充代码/calib/lidar2camera_old/: CMakeLists.txt
补充代码/calib/pose_align/: CMakeLists.txt
补充代码/calib/pose_align/data/: slam_poses.txt
补充代码/calib/pose_align/include/pose_align/: aligner.h  eigen_quaternion_parameterization.h  loader.h  pose_error.h  sensors.h  transform.h
补充代码/calib/pose_align/src/: aligner.cpp  eigen_quaternion_parameterization.cpp  loader.cpp  pose_align_node.cpp  sensors.cpp
补充代码/calib_tools_docker/: build_docker.sh  docker-compose.yml  run_into.sh
补充代码/calib_tools_docker/docker/: README.md  cpu.Dockerfile
补充代码/calibration_kit/: CMakeCache.txt  README.md
补充代码/camera_lidar/: lidar_camera_calib.cpp
补充代码/code/compensate/: CMakeLists.txt  compensate.cpp  lidar16_novatel_extrinsics.yaml
补充代码/code/compensate/pcd_new/: corrected_poses.txt  odometry_loc.txt  pcd_timestamp.txt
补充代码/code/lidar_camera_calib/: lidar_camera_calib.cc
补充代码/code/record_analyzer/: BUILD  ReadMe.md  dump_message.py
补充代码/compensate/pcd_new/: fusion_loc.txt
补充代码/dev_kit_pix_hooke/: control_conf.pb.txt  vehicle_param.pb.txt
补充代码/dev_kit_pix_hooke/cancard_params/: canbus_conf.pb.txt
补充代码/dev_kit_pix_hooke/lidar_params/: lidar16_novatel_extrinsics.yaml
补充代码/lidar_camera_calib/: .lidar_camera_calib.cc.swp
补充代码/lidar_imu_calib/catkin_ws/: README.md
补充代码/rs_for_apollo/: readme
补充代码/scripts/: build_lane_map.sh  lidar_parse.sh  msf_map_creator.sh
(+85 files in other folders)
